Simplify CI reactor configuration